# AI-Operating-System

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  celerybeat-schedule  compose.yml  main.py  pyproject.toml  soul.md
api/: main.py
api/routers/: health.py  telegram.py  workflows.py
context-hub/0-identity/: README.md
context-hub/1-inbox/: README.md
context-hub/3-projects/second-brain/: README.md
context-hub/4-knowledge/: README.md
core/: config.py  context.py  nodes.py  workflow.py
db/: __init__.py  base_model.py  memory.py  models.py
db/migrations/: env.py
db/migrations/versions/: 68520bee23b2_initial_schema.py  ed8d608be5e2_add_conversation_memory.py
skills/: memory.py  telegram.py
workers/: celery_app.py  tasks.py
workflows/: daily_briefing.py  registry.py  telegram_handler.py
